<resources>
    <string name="app_name">Prototype_0</string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Включить микрофон</string>
    <string name="stop_microphone">Выключить микрофон</string>
    <string name="preparing">Подготовка модели\n</string>
    <string name="ready">Готово\n</string>
    <string name="failed">Ошибка при подготовке модели %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Говорите\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Пауза</string>
    <string name="continueRecognition">Продолжить</string>
    <string name="detectImage">Изображение</string>
    <string name="detectAudio">Аудио</string>
    <string name="report">Отчёты</string>
    <string name="code">Код</string>
    <string name="defect">Неисправность</string>
    <string name="reason">Код причины</string>
</resources>