<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/code" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/defect" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/reason" />
    </LinearLayout>

    <ListView
        android:id="@+id/defectList"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/recognize_mic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_microphone"/>

    <ToggleButton
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/pause"
        android:textOn="@string/continueRecognition"/>

</LinearLayout>
