<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/code"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/code" />

        <TextView
            android:id="@+id/defect"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/defect" />

        <TextView
            android:id="@+id/reason"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/reason" />
    </LinearLayout>
</LinearLayout>